// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflect function Should able to reflect destructured parameter 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [
    Object {
      "decorators": Array [],
      "fields": Array [
        "prop1",
        "prop2",
      ],
      "index": 0,
      "kind": "Parameter",
      "name": "{ prop1, prop2 }",
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "returnType": undefined,
}
`;

exports[`Reflect function Should able to reflect function parameter names 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [
    Object {
      "decorators": Array [],
      "fields": "par1",
      "index": 0,
      "kind": "Parameter",
      "name": "par1",
      "type": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "fields": "par2",
      "index": 1,
      "kind": "Parameter",
      "name": "par2",
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "returnType": undefined,
}
`;

exports[`Reflect function Should able to reflect rest parameter 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [
    Object {
      "decorators": Array [],
      "fields": "par1",
      "index": 0,
      "kind": "Parameter",
      "name": "par1",
      "type": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "fields": "par2",
      "index": 1,
      "kind": "Parameter",
      "name": "par2",
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "returnType": undefined,
}
`;

exports[`Reflect function Should reflect function 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [],
  "returnType": undefined,
}
`;

exports[`Reflect lambda function Should able to reflect destructured parameter 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [
    Object {
      "decorators": Array [],
      "fields": Array [
        "prop1",
        "prop2",
      ],
      "index": 0,
      "kind": "Parameter",
      "name": "{ prop1, prop2 }",
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "returnType": undefined,
}
`;

exports[`Reflect lambda function Should able to reflect function parameter names 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [
    Object {
      "decorators": Array [],
      "fields": "par1",
      "index": 0,
      "kind": "Parameter",
      "name": "par1",
      "type": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "fields": "par2",
      "index": 1,
      "kind": "Parameter",
      "name": "par2",
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "returnType": undefined,
}
`;

exports[`Reflect lambda function Should able to reflect rest parameter 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [
    Object {
      "decorators": Array [],
      "fields": "par1",
      "index": 0,
      "kind": "Parameter",
      "name": "par1",
      "type": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "fields": "par2",
      "index": 1,
      "kind": "Parameter",
      "name": "par2",
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "returnType": undefined,
}
`;

exports[`Reflect lambda function Should reflect function 1`] = `
Object {
  "kind": "Function",
  "name": "myFunction",
  "parameters": Array [],
  "returnType": undefined,
}
`;
